--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": "^5.6",
+        "illuminate/html": "5.6",
+        "nesbot/carbon": "1.14"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -17,6 +19,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
+        
     },
     "autoload": {
         "classmap": [
